--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Test</title>
 </head>
 <body>
-    <strong> sashaodumodu.com </strong>
-	thank you for visting!
-	unfortunately, this website is currently under construction.
+    <strong> sashaodumodu.com </strong> <br>
+	thank you for visting! <br>
+	unfortunately, this website is currently under construction. <br>
 	please visit another time.
 </body>
 </html>
+
