--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
-</head>
-<body>
-    <strong> sashaodumodu.com </strong> <br>
-	thank you for visting! <br>
-	unfortunately, this website is currently under construction. <br>
-	please visit another time.
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Landing Page</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<header>
+			<h1>Sasha Odumodu</h1>
+			<nav>
+				<a href="index.html">Home</a>
+				<a href="about.html">About</a>
+				<a href="skills.html">Skills</a>
+				<a href="projects.html">Projects</a>
+				<a href="contact.html">Contact</a>
+			</nav>
+		</header>
+		<main>
+			<h2>Hi, I'm Sasha Odumodu</h2>
+			<p> I created this website for my webpage development class. <br>
+				<br> Here, There will be information on my skills, the sharing my work, and resources to contact me! <br>
+				<br> I'll be updating as I go along, so feel free to check back any time to see how I've improved. <br>
+				<br>
+				<strong> Thank you for visiting . . . ( ´ ▽ ` ).｡ｏ♡ </strong>
+			</p>
+		</main>
+	</body>
 </html>
-
