--- a/skills.html
+++ b/skills.html
@@ -55,6 +55,9 @@
 				</tr>
 			</table>
 			<img src="logos.png" alt="Logos for Programs/Resources">
+			<a href="https://github.com/sashaodumodu/sashaodumodu.com" target="_blank">
+  Visit My GitHub Repository
+</a>
 		</main>
 	</body>
 </html>
