--- a/skills.html
+++ b/skills.html
@@ -19,6 +19,7 @@
 		</header>
 		<main>
 			<h2>My Skills</h2>
+			<div id="top"></div>
 			<ul>
 				<li>Computer Science: Programming, Front/Back-end, Databases</li>
 				<li>Art: Traditional Art, Digital Art, Graphic Design</li>
@@ -56,8 +57,9 @@
 			</table>
 			<img src="logos.png" alt="Logos for Programs/Resources">
 			<a href="https://github.com/sashaodumodu/sashaodumodu.com" target="_blank">
-  				Visit My GitHub Repository
+  				Visit My GitHub Repository!
 			</a>
+			<a href="#top">^</a>
 		</main>
 	</body>
 </html>
