--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
 	<body>
 		<header>
 			<h1>Projects</h1>
+			<div id="top"></div>
 			<nav>
 				<a href="index.html">Home</a>
 				<a href="about.html">About</a>
@@ -29,6 +30,7 @@
 				<img src="frutiger.png" alt="Project 2">
 				<p>Another UI Mockup. This is inspired by early 2000s Frutiger Aero Aesthetics!</p>
 			</div>
+			<a href="#top">^</a>
 		</main>
 	</body>
 </html>
