--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<header>
 			<h1>Sasha Odumodu</h1>
+			<div id="top"></div>
 			<nav>
 				<a href="index.html">Home</a>
 				<a href="about.html">About</a>
@@ -25,6 +26,7 @@
 				<br>
 				<strong> Thank you for visiting . . . ( ´ ▽ ` ).｡ｏ♡ </strong>
 			</p>
+			<a href="#top">^</a>
 		</main>
 	</body>
 </html>
