--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 	<body>
 		<header>
 			<h1>Contact</h1>
+			<div id="top"></div>
 			<nav>
 				<a href="index.html">Home</a>
 				<a href="about.html">About</a>
@@ -25,6 +26,7 @@
 				<textarea placeholder="Your Message" required></textarea>
 				<button type="submit">Send</button>
 			</form>
+			<a href="#top">^</a>
 		</main>
 	</body>
 </html>
