--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 	<body>
 		<header>
 			<h1>About Me</h1>
+			<div id="top"></div>
 			<nav>
 				<a href="index.html">Home</a>
 				<a href="about.html">About</a>
@@ -24,5 +25,6 @@
 			<p> In 6th grade, I discovered Scratch and fell in love with the idea of creating my own game, mixing my love for computers and programming with the art I had always made to comfort myself.</p>
 			<p>Because of this, I decided to major in Computer Science with a Simulation/Animation/Gaming minor at Eastern Michigan University. My goal is to create my own games and softwares, so that other people can feel inspired as well.</p>
 		</main>
+		<a href="#top">^</a>
 	</body>
 </html>
