--- a/about.html
+++ b/about.html
@@ -25,6 +25,6 @@
 			<p> In 6th grade, I discovered Scratch and fell in love with the idea of creating my own game, mixing my love for computers and programming with the art I had always made to comfort myself.</p>
 			<p>Because of this, I decided to major in Computer Science with a Simulation/Animation/Gaming minor at Eastern Michigan University. My goal is to create my own games and softwares, so that other people can feel inspired as well.</p>
 		</main>
-		<a href="#top">^</a>
+		<a href="#top"> <p> ^ </p> </a>
 	</body>
 </html>
