--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 				<textarea placeholder="Your Message" required></textarea>
 				<button type="submit">Send</button>
 			</form>
-			<a href="#top">^</a>
 		</main>
+		<a href="#top"> <p> ^ </p> </a>
 	</body>
 </html>
