--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<br>
 				<strong> Thank you for visiting . . . ( ´ ▽ ` ).｡ｏ♡ </strong>
 			</p>
-			<a href="#top">^</a>
 		</main>
+		<a href="#top"> <p> ^ </p> </a>
 	</body>
 </html>
