--- a/skills.html
+++ b/skills.html
@@ -59,7 +59,7 @@
 			<a href="https://github.com/sashaodumodu/sashaodumodu.com" target="_blank">
   				Visit My GitHub Repository!
 			</a>
-			<a href="#top">^</a>
 		</main>
+		<a href="#top"> <p> ^ </p> </a>
 	</body>
 </html>
