--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 				<img src="frutiger.png" alt="Project 2">
 				<p>Another UI Mockup. This is inspired by early 2000s Frutiger Aero Aesthetics!</p>
 			</div>
-			<a href="#top">^</a>
 		</main>
+		<a href="#top"> <p> ^ </p> </a>
 	</body>
 </html>
