--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<main>
 			<h2>Hi, I'm Sasha Odumodu</h2>
 			<p> I created this website for my webpage development class. <br>
-				<br> Here, There will be information on my skills, the sharing my work, and resources to contact me! <br>
+				<br> Here, There will be information on my skills, the sharing of my work, and resources to contact me! <br>
 				<br> I'll be updating as I go along, so feel free to check back any time to see how I've improved. <br>
 				<br>
 				<strong> Thank you for visiting . . . ( ´ ▽ ` ).｡ｏ♡ </strong>
