--- a/skills.html
+++ b/skills.html
@@ -55,7 +55,9 @@
 					<td>Scratch, Unity</td>
 				</tr>
 			</table>
-			<img src="logos.png" alt="Logos for Programs/Resources">
+			<div class="project">
+				<img src="logos.png" alt="Logos for Programs/Resources">
+			</div>
 			<a href="https://github.com/sashaodumodu/sashaodumodu.com" target="_blank">
   				Visit My GitHub Repository!
 			</a>
